objects/WorkRamp_Assignment__c.object
<CustomObject>
    <label>WorkRamp Assignment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WorkRamp Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Link__c</fullName>
        <formula>IF( WorkRampTrainingType__c = &quot;Challenge&quot;, HYPERLINK(&quot;https://app.workramp.com/admin/challenge_user_assignments/&quot; &amp;WorkRampId__c &amp;&quot;/review&quot;     ,&quot;View Assignment on WorkRamp&quot;),
             IF( WorkRampTrainingType__c = &quot;Guide&quot;    , HYPERLINK(&quot;https://app.workramp.com/admin/guide_assignments/&quot;          &amp;WorkRampId__c &amp;&quot;/submissions&quot;,&quot;View Assignment on WorkRamp&quot;),
                 NULL ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <label>Assignee</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigner__c</fullName>
        <label>Assigner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MaxPoints__c</fullName>
        <label>Max Points</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkRampId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>WorkRamp Id</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AssignedDate__c</fullName>
        <label>Assigned Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EarnedPoints__c</fullName>
        <label>Earned Points</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastAccessed__c</fullName>
        <label>Last Accessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CompletionDate__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkRampPathId__c</fullName>
        <label>WorkRamp Path Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GradingComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grading Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PercentComplete__c</fullName>
        <label>Percent Complete</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WorkRampApp_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field that establishes a lookup relationship between a WorkRamp Assignment object and a Salesforce User object. This field is managed by WorkRamp.</description>
        <inlineHelpText>Salesforce User associated with this Assignment</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WorkRamp_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkRampPathName__c</fullName>
        <label>WorkRamp Path Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkRampTrainingId__c</fullName>
        <label>WorkRamp Training Id</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee_Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignee Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkRampAssigneeName__c</fullName>
        <label>Assignee Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkRampTrainingType__c</fullName>
        <label>WorkRamp Training Type</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkRampAssigneeGroups__c</fullName>
        <label>WorkRamp Assignee Groups</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>